--- a/letras/vitruvia.html
+++ b/letras/vitruvia.html
@@ -14,13 +14,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Abel" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/albery.css">
+    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../css/main.css">
 
-    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <script src="../js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
   </head>
 
   <body>
@@ -45,7 +44,7 @@
             <li><a href="#sobre">Sobre</a></li>
             <li><a href="#discografia">Discografia</a></li>
             <li><a href="#videos">Videos</a></li>
-            <li><a href="#home"><img src="img/logo-menu.png" alt="Eve Desire" class="logo"></a></li>
+            <li><a href="#home"><img src="../img/logo-menu.png" alt="Eve Desire" class="logo"></a></li>
             <li><a href="#fotos">Fotos</a></li>
             <li><a href="#agenda">Agenda</a></li>
             <li><a href="#contato">Contato</a></li>
@@ -56,200 +55,52 @@
       <!-- /.container-fluid -->
     </nav>
 
-    <img src="img/quantica-cover.jpg" alt="QUANTICA COMING SOON" class="hero">
-
     <div class="container">
       <!-- Example row of columns -->
-      <section id="sobre" class="row sobre">
+      <section id="letra" class="row letra">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h2>Vitruvia</h2>
+          <h3>Letras</h3>
+          <p style="white-space: pre">
+A long time ago
+It was believed that the planets were spheres who turned around the Earth
+The might of sound around you
+So now, do you feel in your soul?
+Spheres and notes inside you
 
+
+Living and dreaming with nothing and all
+Sounds in your soul
+Sound to be free
+
+
+So now, what do you feel?
+In your soul, alone here?
+Passion, lust, fear, bravery
+Loose notes on a score
+To listen, to see, to find your bit
+“Blue note” inside you
+Alone here
+
+
+Living and dreaming with nothing and all
+Sounds in your soul
+Sound to be free
+
+Living and dreaming with nothing and all
+Sounds in your soul
+Sound to be free
+          </p>
+<blockquote>
+  <p>
+    Letra por Arya Cappia
+  </p>
+
+</blockquote>
         </div>
       </section>
 
-      <hr>
-
-      <section id="discografia" class="row discografia">
-        <div class="col-md-12">
-
-          <div class="row disco">
-            <div class="col-sm-12 col-md-4">
-              <img src="img/quantica.jpg" alt="Quantica">
-            </div>
-
-            <div class="col-sm-12 col-md-8">
-              <h2>Quantica</h2>
-              <p>Veja as <a href="letras/quantica.html" target="_blank" class="lyrics">letras aqui</a> </p>
-
-              <p>Released 1st December 2018 by Fusion.</p>
-
-              <p>Cover art by Vinicius Ramadoni.</p>
-
-              <p>Mastered by Thiago Bianchi at Fusion Studios, Sao Paulo. </p>
-
-              <p>Stream at <a href="" class="stream">Spotify</a>,
-                <a href="" class="stream">Apple Music</a>,
-                <a href="" class="stream">Deezer</a>,
-                <a href="" class="stream">Google Play</a>
-              </p>
-            </div>
-          </div>
-
-          <div class="row disco">
-            <div class="col-sm-12 col-md-4">
-              <img src="img/vitruvia.jpg" alt="Vitruvia">
-            </div>
-
-            <div class="col-sm-12 col-md-8">
-              <h2>Vitruvia</h2>
-              <p>Veja as <a href="letras/vitruvia.html" target="_blank" class="lyrics">letras aqui</a> </p>
-
-              <p>Released 1st December 2014 by Yourtrack.</p>
-
-              <p>Cover art by Vinicius Ramadoni.</p>
-
-              <p>Mastered by Wagner Cappia at Yourtrack Studios, Sao Paulo. </p>
-
-              <p>Stream at <a href="" class="stream">Spotify</a>,
-                <a href="" class="stream">Apple Music</a>,
-                <a href="" class="stream">Deezer</a>,
-                <a href="" class="stream">Google Play</a>
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <hr>
-
-      <section id="videos" class="row videos">
-        <div class="col-md-12">
-          <iframe id="mainVideoPlayer" style="display: block; margin:0 auto;" width="900" height="506" src="https://www.youtube.com/embed/bdzRr4V3wY4?rel=0&amp;controls=1&modestbrand=1&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-<!--
- Vini
-Aqui vao as miniaturas dos videos, vc pode colocar o icone de play nelas
- -->
-        <div class="row videosList">
-          <div class="col-md-4">
-            <img src="img/video1.png" video="bdzRr4V3wY4" alt="" class="videoChange">
-          </div>
-          <div class="col-md-4">
-            <img src="img/video2.png" video="nxracsQnjrs" alt="" class="videoChange">
-          </div>
-          <div class="col-md-4">
-            <img src="img/video3.png" video="NJnJwUQT0lA" alt="" class="videoChange">
-          </div>
-        </div>
-        <div class="row visiteYoutube">
-          <div class="col-md-12">
-            <a href="https://www.youtube.com/user/evedesiresinfonica" target="_blank"> Visite nosso Youtube</a>
-          </div>
-        </div>
-      </section>
-
-      <hr>
-
-      <div class="albery-container">
-
-        <div class="albery-wrapper">
-<!--
- Vini
-Aqui vao as imagens com resolução final
- -->
-          <div class="albery-item">
-            <img src="img/video2.png" alt="">
-          </div>
-          <div class="albery-item">
-            <img src="img/video3.png" alt="">
-          </div>
-          <div class="albery-item">
-            <img src="img/video6.png" alt="">
-          </div>
-          <div class="albery-item">
-            <img src="img/video5.png" alt="">
-          </div>
-          <div class="albery-item">
-            <img src="img/video7.png" alt="">
-          </div>
-
-        </div>
-
-
-      </div>
-
-<!--
- Vini
-Aqui vao as miniaturas
- -->
-      <div class="pagination-container">
-        <div class="pagination-wrapper">
-          <div class="pagination-item" data-item="1">
-            <img src="img/video2.png" alt="">
-          </div>
-          <div class="pagination-item" data-item="2">
-            <img src="img/video3.png" alt="">
-          </div>
-          <div class="pagination-item" data-item="3">
-            <img src="img/video6.png" alt="">
-          </div>
-          <div class="pagination-item" data-item="4">
-            <img src="img/video5.png" alt="">
-          </div>
-          <div class="pagination-item" data-item="5">
-            <img src="img/video7.png" alt="">
-          </div>
-        </div>
-      </div>
-
-      <hr>
-
-      <section id="agenda" class="row agenda">
-        <div class="col-md-12">
-          <h2>Próximos shows</h2>
-          <h3>2018</h3>
-        </div>
-
-        <div class="row showsList">
-          <div class="col-md-2">
-            25/Nov - 20h
-          </div>
-          <div class="col-md-3">
-            São Paulo, SP
-          </div>
-          <div class="col-md-7">
-            Manifesto Bar - Rua Iguatemi, nº 36C
-          </div>
-
-          <div class="col-md-2">
-            25/Nov - 20h
-          </div>
-          <div class="col-md-3">
-            São Paulo, SP
-          </div>
-          <div class="col-md-7">
-            Manifesto Bar - Rua Iguatemi, nº 36C
-          </div>
-
-
-        </div>
-      </section>
-
-      <hr>
-
-      <section id="contato" class="row contato">
-        <p>
-          Entre em contato através do e-mail: <br>
-          <a href="mailto:contato@evedesire.com">contato@evedesire.com</a> <br><br>
-          Ou acesse nossas redes sociais.
-        </p>
-      </section>
     </div>
     <!-- /container -->
 
@@ -308,11 +159,11 @@ Aqui vao as miniaturas
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>
-      window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')
+      window.jQuery || document.write('<script src="../js/vendor/jquery-1.11.2.min.js"><\/script>')
     </script>
-    <script src="js/vendor/bootstrap.min.js"></script>
-    <script src="js/albery.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/vendor/bootstrap.min.js"></script>
+    <script src="../js/albery.js"></script>
+    <script src="../js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
