--- a/letras/quantica.html
+++ b/letras/quantica.html
@@ -41,13 +41,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav centered">
-            <li><a href="#sobre">Sobre</a></li>
-            <li><a href="#discografia">Discografia</a></li>
-            <li><a href="#videos">Videos</a></li>
-            <li><a href="#home"><img src="../img/logo-menu.png" alt="Eve Desire" class="logo"></a></li>
-            <li><a href="#fotos">Fotos</a></li>
-            <li><a href="#agenda">Agenda</a></li>
-            <li><a href="#contato">Contato</a></li>
+            <li><a href="../index.html#banda">Banda</a></li>
+            <li><a href="../index.html#discografia">Discografia</a></li>
+            <li><a href="../index.html#videos">Videos</a></li>
+            <li><a href="../index.html#home"><img src="../img/logo-menu.png" alt="Eve Desire" class="logo"></a></li>
+            <li><a href="../index.html#fotos">Fotos</a></li>
+            <li><a href="../index.html#agenda">Agenda</a></li>
+            <li><a href="../index.html#contato">Contato</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
